Fix virtical scrollbar bug
In Windows System, using overflow-x: scroll will create a visible
scrollbar even if the section is empty.
Changing to overflow-x: auto fix the problem

--- a/client/src/styles/h-scrollable.scss
+++ b/client/src/styles/h-scrollable.scss
@@ -5,7 +5,7 @@
     border-right: 1px solid rgba($gray, 0);
     border-left: 1px solid rgba($gray, 0);
     height: 420px;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
